deploy/init/postgres-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: postgres
    spec:
      containers:
      - image: postgres
        name: postgres
        volumeMounts:
        - mountPath: "/var/lib/postgresql"
          name: postgres-volume-mount
        ports:
        - containerPort: 5432
        resources: {}
      restartPolicy: Always
      volumes:
        - name: postgres-volume-mount
          persistentVolumeClaim:
            claimName: postgres-data
