deploy/init/load-balancer-service.yaml
# kubectl edit services/my-service
# kubectl expose deployment amqp --type=LoadBalancer --name=my-service
# I only need one load balancer. The other services can expose themselves perhaps?



apiVersion: v1
kind: Service
metadata:
  name: load-balancer
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3002
      protocol: TCP
  selector:
    io.kompose.service: api
  type: LoadBalancer


# https://kubernetes.io/docs/tasks/access-application-cluster/port-forward-access-application-cluster/
# You can use port-forwarding to access amqp
# kubectl port-forward svc/amqp 15672:15672
